--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -2,22 +2,43 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="50dp"
-    app:cardCornerRadius="4dp">
+    android:layout_height="140dp"
+    android:layout_marginTop="50dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp"
+    android:layout_marginBottom="20dp"
+    app:cardCornerRadius="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp">
+        android:orientation="vertical"
+        android:background="@android:color/holo_green_light">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="@android:color/holo_green_dark"
+            android:text="Consorcio de transportes Bahía de Cádiz"
+            android:textColor="@android:color/white"/>
+
+        <TextView
+            android:id="@+id/text_view_tipe_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:text="Tipo"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"/>
 
         <TextView
             android:id="@+id/text_view_number_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="45dp"
             android:text="Nº Tarjeta"
-            android:textSize="40sp"
-            android:textAlignment="center"/>
+            android:textSize="20sp"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/white"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
