--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -90,7 +90,7 @@
             android:id="@+id/btn_search_trip"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
             android:text="@string/btn_search_trip"
@@ -98,15 +98,15 @@
             android:textSize="20sp"
             android:layout_marginBottom="20dp"/>
 
-        <Button
+        <!--<Button
             android:id="@+id/btn_pay_trip"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
             android:text="@string/btn_pay_trip"
             android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp" />-->
     </LinearLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.core.widget.NestedScrollView>
