--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -25,6 +25,9 @@
         <item android:id="@+id/nav_log"
             android:title="@string/me"
             android:icon="@drawable/ic_logging"/>
+        <item android:id="@+id/nav_sign_up"
+            android:title="@string/sign_up"
+            android:icon="@drawable/ic_logging"/>
         <!--<item android:id="@+id/nav_settings"
             android:title="@string/settings"
             android:icon="@drawable/ic_settings"/>-->
